--- a/components/banner.html
+++ b/components/banner.html
@@ -9,7 +9,7 @@
             {% if page.params.banner.actions %}
                 <ul class="actions">
                     {% for action in page.params.banner.actions %}
-                        <li><a href="{% if action.url | starts_with('#') %}{{ action.url }}{% else %}{{ action.url | link | relative_url }}{% endif %}" {{ classNames("button", {"primary": action.is_primary}, {"scrolly": action.is_scrolly}, {"huge": action.is_huge}) }}>{{ action.label }}</a></li>
+                        <li><a href="{% if action.url | starts_with('#') %}{{ action.url }}{% else %}{{ action.url | relative_url }}{% endif %}" {{ classNames("button", {"primary": action.is_primary}, {"scrolly": action.is_scrolly}, {"huge": action.is_huge}) }}>{{ action.label }}</a></li>
                     {% endfor %}
                 </ul>
             {% endif %}
